Avoid the overlay effect for figure caption on mobile

--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -63,4 +63,11 @@ $device-container: (
       transform: none;
     }
   }
+
+  figcaption {
+    position: relative;
+    padding: 0 0.5em;
+    transform: translateY(0);
+    font-size: 0.875em;
+  }
 }
